   with new gettext versions (GitHub's #428).
   Thanks to Jan Palus for the issue report and the fix.
 * Use the semantic of Perl v5.12 (released in 2012) instead of the previously
   requested one (v5.6 release in 2000). This is to request the unicode_strings
   feature, making the utf strings more predictable.
 * Accept BOM markers at the beginning of files (GitHub's #443 and #333) [Mt]

po4a main script (the deprecated po4a-* scripts are still buggy):
 * Deal properly with CRLF files coming from windows (GitHub's #409).
 * Allow to escape spaces in file names, or to quote them (GitHub's #412).
 * Do not pass empty PO files to msgmerge, as it stumbles on such things when
   the POT file has UTF chars in the msgids. (GitHub's #442) [Mt]

po4a-translate:
 * Remove the wrap-po option that was not used internally.

po4a-updatepo:
 * Do not pass empty PO files to msgmerge, as it stumbles on such things when
   the POT file has UTF chars in the msgids. (Debian's #1022216) [Mt]

Build scripts:
 * Use xmlcatalog(1) to find DocBook XSL file (GitHub's #431).

Translations:
 * Updated: Chinese (traditional), thanks Haowei Hsu.
 * Updated: French, thanks Jérémie Tarot.
 * Updated: German, thanks Helge Kreutzmann.
 * Updated: Japanese, thanks gemmaro.
 * Updated: Norwegian Bokmål, thanks Allan Nordhøy and Petter Reinholdtsen.
 * Updated: Portuguese, thanks Silvério Santos.
 * Updated: Russian, thanks vrbtm and Виталий Наумов.
 * Updated: Serbian (cyrillic), thanks Ivan Pesic.
 * Updated: Spanish, thanks Francisco Serrador and ignotus.

=======================================================================
        ___   __   ___
__   __/ _ \ / /_ / _ \
\ \ / / | | | '_ \ (_) |          Happy New Year release.
 \ V /| |_| | (_) \__, |
  \_/  \___(_)___/  /_/           (Released on 2023/01/01)

Markdown:
 * Parts of a fenced divs are now translated separately (GitHub's #381)

YAML and Yaml Front Matter:
 * Use the implementation of YFM to parse YAML files too.