@@ -223,4 +223,4 @@ adaptation for po4a was done by:
  Copyright © 2005 SPI, Inc.
 
 This program is free software; you may redistribute it and/or modify it
-under the terms of GPL (see the COPYING file).
+under the terms of GPL v2.0 or later (see the COPYING file).
