@@ -1,7 +1,7 @@
 # Locale::Po4a::Ini -- Convert ini files to PO file, for translation.
 #
 # This program is free software; you may redistribute it and/or modify it
-# under the terms of GPL (see COPYING).
+# under the terms of GPL v2.0 or later (see COPYING).
 #
 
 ############################################################################
@@ -115,6 +115,6 @@ L<Locale::Po4a::TransTractor(3pm)>, L<po4a(7)|po4a.7>
 Copyright © 2006 BitDefender
 
 This program is free software; you may redistribute it and/or modify it
-under the terms of GPL (see the COPYING file).
+under the terms of GPL v2.0 or later (see the COPYING file).
 
 =cut
