@@ -388,7 +388,7 @@ L<po4a(7)|po4a.7>
 Copyright © 2002-2008 SPI, Inc.
 
 This program is free software; you may redistribute it and/or modify it
-under the terms of GPL (see the COPYING file).
+under the terms of GPL v2.0 or later (see the COPYING file).
 
 =cut
 
