@@ -60,7 +60,7 @@ L<po4a(7)|po4a.7>
 Copyright © 2004-2007 Nicolas FRANÇOIS <nicolas.francois@centraliens.net>.
 
 This program is free software; you may redistribute it and/or modify it
-under the terms of GPL (see COPYING file).
+under the terms of GPL v2.0 or later (see COPYING file).
 
 =cut
 
