@@ -7,7 +7,7 @@ eval 'exec perl -S $0 ${1+"$@"}'
 # Copyright 2005 by Martin Quinson (mquinson#debian.fr)
 #
 # This program is free software; you can redistribute it and/or modify it
-# under the terms of GPL (see COPYING).
+# under the terms of GPL v2.0 or later (see COPYING).
 
 my $VERSION=$Locale::Po4a::TransTractor::VERSION;
 
@@ -105,7 +105,7 @@ L<po4a(7)>
 Copyright 2005 by SPI, inc.
 
 This program is free software; you may redistribute it and/or modify it
-under the terms of GPL (see the COPYING file).
+under the terms of GPL v2.0 or later (see the COPYING file).
 
 =cut
 
