@@ -5,7 +5,7 @@ eval 'exec perl -S $0 ${1+"$@"}'
 # Copyright 2002, 2003, 2004 by Martin Quinson (mquinson#debian.org)
 #
 # This program is free software; you can redistribute it and/or modify it
-# under the terms of GPL (see COPYING).
+# under the terms of GPL v2.0 or later (see COPYING).
 
 
 =head1 NAME
@@ -129,7 +129,7 @@ the po4a project, and the other tools developed in that framework.
 Copyright 2004 by SPI, inc.
 
 This program is free software; you may redistribute it and/or modify it
-under the terms of GPL (see COPYING file).
+under the terms of GPL v2.0 or later (see COPYING file).
 
 =cut
 
