@@ -64,6 +64,8 @@ General:
    requested one (v5.6 release in 2000). This is to request the unicode_strings
    feature, making the utf strings more predictable.
  * Accept BOM markers at the beginning of files (GitHub's #443 and #333) [Mt]
+ * Specify in the README.md and in all source files that the license is GPL2+,
+   not GPL2-only (GitHub's #434) [Mt]
 
 po4a main script (the deprecated po4a-* scripts are still buggy):
  * Deal properly with CRLF files coming from windows (GitHub's #409).
